# j-feelgood-subs

./: .gitignore  J Feelgood Subscription.md  README.md  package.json  pnpm-lock.yaml  progress_log.md  turbo.json
.idx/: dev.nix
Pages/: 3 Copy Optimization Prompt - J Feelgood Subscriptions.md  3 Tier Pricing.md  8 Lovable Implementation Prompt - J Feelgood Subscriptions Landing Page.md  Document 10 Story 23 Subscriber Management Dashboard.md  Document 11 Story 31 Secure Payment Information Submission.md  Document 14 Story 42 High-Resolution Digital Art Print Access.md  Document 2 JFeelgood Subscriptions PRD.md  Document 3 JFeelgood Subscriptions Architecture Document.md  Document 5 JFeelgood Subscriptions Frontend Architecture Document.md  Document 9 Story 22 Secure User Login.md  Genspark Kickoff Prompt.md  Hormozi Offers.md  Hormozi Reasoning.md  MVP Build-Out for JFeelgood Subscriptions - Context Engineering & Lovableai Han.md  Phase 1 Deep Research & Strategy.md  Project Requirements Document (PRD) for JFeelgood Subscriptions.md
apps/backend/: .gitignore  pyproject.toml
apps/backend/app/models/: subscription.py
apps/backend/src/api/: auth.py  content.py  subscriptions.py  users.py
docs/: architecture.md  front-end-spec.md  frontend-architecture.md  mini-prd.md  prd.md  story-1-1.md  story-1-2.md  story-2-1.md  story-2-2.md  story-2-3.md  story-3-1.md  story-3-2.md  story-4-1.md  story-4-2.md  story-xx-faq.md  ui-ux-specification.md
frontend/: package.json
project-documentation/: 4 Visual Style Guide Prompt - J Feelgood Subscriptions.md  (+15 more)
(+32 files in other folders)
